apps/autotunchi/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: autotunchi
  labels:
    app.kubernetes.io/name: autotunchi
    app.kubernetes.io/managed-by: argocd
